--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,11 @@
 @use 'fonts';
 @use 'layout';
 @use 'shortcuts';
+
+
+
+$primary_font: 'Rajdhani', sans-serif;
+
+body {font-family: $primary_font;}
+
+$main_menu_height: 2.5rem;
