--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,7 @@ $primary_font: 'Rajdhani', sans-serif;
 body {font-family: $primary_font;}
 
 $main_menu_height: 2.5rem;
+
+
+$content_height: calc(100vh - 3.5rem);
+$control_height: 3rem;
